
[TestRequireAwaitRule/invalid-0 - 1]
Diagnostic 1: missingAwait (2:1 - 2:24)
Message: Function has no 'await' expression.
   1 | 
   2 | async function numberOne(): Promise<number> {
     | ~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   return 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-1 - 1]
Diagnostic 1: missingAwait (2:19 - 2:33)
Message: Function has no 'await' expression.
   1 | 
   2 | const numberOne = async function (): Promise<number> {
     |                   ~~~~~~~~~~~~~~~
   3 |   return 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-2 - 1]
Diagnostic 1: missingAwait (1:45 - 1:46)
Message: Function has no 'await' expression.
   1 | const numberOne = async (): Promise<number> => 1;
     |                                             ~~
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-3 - 1]
Diagnostic 1: missingAwait (2:1 - 2:21)
Message: Function has no 'await' expression.
   1 | 
   2 | async function values(): Promise<Array<number>> {
     | ~~~~~~~~~~~~~~~~~~~~~
   3 |   return [1];
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-4 - 1]
Diagnostic 1: missingAwait (2:9 - 2:26)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function foo() {
     |         ~~~~~~~~~~~~~~~~~~
   3 |           function nested() {
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-5 - 1]
Diagnostic 1: missingAwait (2:1 - 2:19)
Message: Function has no 'await' expression.
   1 | 
   2 | async function* foo(): void {
     | ~~~~~~~~~~~~~~~~~~~
   3 |   doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-6 - 1]
Diagnostic 1: missingAwait (2:1 - 2:19)
Message: Function has no 'await' expression.
   1 | 
   2 | async function* foo() {
     | ~~~~~~~~~~~~~~~~~~~
   3 |   yield 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-7 - 1]
Diagnostic 1: missingAwait (2:13 - 2:28)
Message: Function has no 'await' expression.
   1 | 
   2 | const foo = async function* () {
     |             ~~~~~~~~~~~~~~~~
   3 |   console.log('bar');
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-8 - 1]
Diagnostic 1: missingAwait (2:1 - 2:30)
Message: Function has no 'await' expression.
   1 | 
   2 | async function* asyncGenerator() {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   yield 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-9 - 1]
Diagnostic 1: missingAwait (2:1 - 2:30)
Message: Function has no 'await' expression.
   1 | 
   2 | async function* asyncGenerator(source: Iterable<any>) {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   yield* source;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-10 - 1]
Diagnostic 1: missingAwait (5:1 - 5:30)
Message: Function has no 'await' expression.
   4 | }
   5 | async function* asyncGenerator(source: Iterable<any> | AsyncIterable<any>) {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |   if (!isAsyncIterable(source)) {
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-11 - 1]
Diagnostic 1: missingAwait (5:1 - 5:30)
Message: Function has no 'await' expression.
   4 | }
   5 | async function* asyncGenerator() {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |   yield* syncGenerator();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-12 - 1]
Diagnostic 1: missingAwait (2:1 - 2:30)
Message: Function has no 'await' expression.
   1 | 
   2 | async function* asyncGenerator() {
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |   yield* anotherAsyncGenerator(); // Unknown function.
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-13 - 1]
Diagnostic 1: missingAwait (2:29 - 2:30)
Message: Function has no 'await' expression.
   1 | 
   2 |         const fn = async () => {
     |                             ~~
   3 |           using foo = new Bar();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-14 - 1]
Diagnostic 1: missingAwait (3:9 - 3:27)
Message: Function has no 'await' expression.
   2 |         // intentional TS error
   3 |         async function* foo(): Promise<number> {
     |         ~~~~~~~~~~~~~~~~~~~
   4 |           yield 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-15 - 1]
Diagnostic 1: missingAwait (2:9 - 2:27)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function* foo(): AsyncGenerator {
     |         ~~~~~~~~~~~~~~~~~~~
   3 |           yield 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-16 - 1]
Diagnostic 1: missingAwait (2:9 - 2:27)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function* foo(): AsyncGenerator<number> {
     |         ~~~~~~~~~~~~~~~~~~~
   3 |           yield 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-17 - 1]
Diagnostic 1: missingAwait (2:9 - 2:26)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function foo(): globalThis.Promise<number> {
     |         ~~~~~~~~~~~~~~~~~~
   3 |           return 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-18 - 1]
Diagnostic 1: missingAwait (5:9 - 5:26)
Message: Function has no 'await' expression.
   4 |         }
   5 |         async function foo(): Bluebird.Promise<number> {
     |         ~~~~~~~~~~~~~~~~~~
   6 |           return 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRule/invalid-19 - 1]
Diagnostic 1: missingAwait (2:9 - 2:27)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function* foo(): globalThis.AsyncGenerator<number> {
     |         ~~~~~~~~~~~~~~~~~~~
   3 |           yield 1;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-0 - 1]
Diagnostic 1: missingAwait (2:9 - 2:26)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function foo() {
     |         ~~~~~~~~~~~~~~~~~~
   3 |           doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-1 - 1]
Diagnostic 1: missingAwait (2:10 - 2:24)
Message: Function has no 'await' expression.
   1 | 
   2 |         (async function () {
     |          ~~~~~~~~~~~~~~~
   3 |           doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-2 - 1]
Diagnostic 1: missingAwait (2:18 - 2:19)
Message: Function has no 'await' expression.
   1 | 
   2 |         async () => {
     |                  ~~
   3 |           doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-3 - 1]
Diagnostic 1: missingAwait (1:10 - 1:11)
Message: Function has no 'await' expression.
   1 | async () => doSomething();
     |          ~~
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-4 - 1]
Diagnostic 1: missingAwait (3:11 - 3:19)
Message: Function has no 'await' expression.
   2 |         ({
   3 |           async foo() {
     |           ~~~~~~~~~
   4 |             doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-5 - 1]
Diagnostic 1: missingAwait (3:11 - 3:19)
Message: Function has no 'await' expression.
   2 |         class A {
   3 |           async foo() {
     |           ~~~~~~~~~
   4 |             doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-6 - 1]
Diagnostic 1: missingAwait (3:11 - 3:26)
Message: Function has no 'await' expression.
   2 |         class A {
   3 |           public async foo() {
     |           ~~~~~~~~~~~~~~~~
   4 |             doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-7 - 1]
Diagnostic 1: missingAwait (3:11 - 3:19)
Message: Function has no 'await' expression.
   2 |         (class {
   3 |           async foo() {
     |           ~~~~~~~~~
   4 |             doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-8 - 1]
Diagnostic 1: missingAwait (3:11 - 3:18)
Message: Function has no 'await' expression.
   2 |         (class {
   3 |           async ''() {
     |           ~~~~~~~~
   4 |             doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-9 - 1]
Diagnostic 1: missingAwait (2:9 - 2:26)
Message: Function has no 'await' expression.
   1 | 
   2 |         async function foo() {
     |         ~~~~~~~~~~~~~~~~~~
   3 |           async () => {
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-10 - 1]
Diagnostic 1: missingAwait (3:27 - 3:28)
Message: Function has no 'await' expression.
   2 |         async function foo() {
   3 |           await (async () => {
     |                           ~~
   4 |             doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-11 - 1]
Diagnostic 1: missingAwait (3:18 - 3:35)
Message: Function has no 'await' expression.
   2 |         const obj = {
   3 |           async: async function foo() {
     |                  ~~~~~~~~~~~~~~~~~~
   4 |             bar();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-12 - 1]
Diagnostic 1: missingAwait (2:9 - 2:40)
Message: Function has no 'await' expression.
   1 | 
   2 |         async    /* test */ function foo() {
     |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |           doSomething();
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-13 - 1]
Diagnostic 1: missingAwait (4:11 - 4:19)
Message: Function has no 'await' expression.
   3 |           a = 0
   4 |           async [b]() {
     |           ~~~~~~~~~
   5 |             return 0;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-14 - 1]
Diagnostic 1: missingAwait (3:18 - 3:19)
Message: Function has no 'await' expression.
   2 |         foo
   3 |         async () => {
     |                  ~~
   4 |           return 0;
  Suggestion 1: [removeAsync] Remove 'async'.
---

[TestRequireAwaitRuleEslintBase/invalid-15 - 1]
Diagnostic 1: missingAwait (4:11 - 4:21)
Message: Function has no 'await' expression.
   3 |           foo() {}
   4 |           async [bar]() {
     |           ~~~~~~~~~~~
   5 |             baz;
  Suggestion 1: [removeAsync] Remove 'async'.
---
